Improve Tray Menu integration